src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@out2-fsT-wfsAU-spA2.snap
---
source: src/tests/window_opening.rs
description: "open on output: headless-2\nopen fullscreen: true\nwant fullscreen: AU\nset parent: A2"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]

post-map configures:
size: 0 × 0, bounds: 1900 × 1060, states: []
